data/derived/comb/progs/unify/prog5589.ml.out
Characters 478-493:
  | Darius( e1, e2, e3 )     -> (eval (e1, x, y) + eval (e2, x, y)) log eval (e3, x, y);;
                                 ^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
